Prepare solution for Java 21 and Spring Boot 3.2